fixed text alignment for paragraph html

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ p {
     font-weight: 400;
     font-size: .85rem;
 
-    text-align: right;
+    /* text-align: right; */
 
     max-width: 1500px;
     margin: 0 auto;
